--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
       gtag('config', 'G-CQG157RQSC');
     </script>
 
-    <meta property="og:title" content="【LINE限定】豪華特典">
-    <meta property="og:description" content="AIツール / プロンプト / テンプレート / ノウハウをお受け取りください">
+    <meta property="og:title" content="受け取りはこちら">
     <meta property="og:image" content="https://leo-sns.github.io/Free-Gifts-LO/CTA_LINE_For_GitHub.png">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://leo-sns.github.io/Free-Gifts-LO/">
