--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     
       gtag('config', 'G-CQG157RQSC');
     </script>
-
-    <meta property="og:title" content="受け取りはこちら">
+    
+    <meta property="og:title" content="受け取りはこちらをタップ">
     <meta property="og:image" content="https://leo-sns.github.io/Free-Gifts-LO/CTA_LINE_For_GitHub.png">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://leo-sns.github.io/Free-Gifts-LO/">
