--- a/index.html
+++ b/index.html
@@ -9,10 +9,8 @@
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
-    
-      gtag('config', 'G-CQG157RQSC');
     </script>
-    
+
     <meta property="og:title" content="受け取りはこちらをタップ">
     <meta property="og:image" content="https://leo-sns.github.io/Free-Gifts-LO/CTA_LINE_For_GitHub.png">
     <meta property="og:type" content="website">
@@ -25,10 +23,20 @@
     <p>Redirecting...</p>
 
     <script>
+        var targetUrl = "https://www.notion.so/LINE-2d33808376f580ce89bdeae64d1c59fe";
+        var redirected = false;
 
-        setTimeout(function() {
-            window.location.href = "https://www.notion.so/LINE-2d33808376f580ce89bdeae64d1c59fe";
-        }, 100);
+        function doRedirect() {
+            if (redirected) return;
+            redirected = true;
+            window.location.href = targetUrl;
+        }
+
+        gtag('config', 'G-CQG157RQSC', {
+            'event_callback': doRedirect
+        });
+
+        setTimeout(doRedirect, 1000);
     </script>
 </body>
 </html>
